# futures-scopes

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  flake.nix  readme.md  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
src/: lib.rs  local.rs  local_spawn_scope.rs  scoped_spawn.rs  spawn_scope.rs
src/relay/: mod.rs  relay_future.rs  relay_pad.rs  waker_park.rs
tests/: local.rs
tests/relay/: fuzzy.rs  mod.rs
