[package]
authors = ["SrTobi <code.databyte@gmail.com>"]
description = "Runtime agnostic, nestable, scopes for spawning non-static futures."
documentation = "https://docs.rs/futures-scopes"
edition = "2021"
homepage = "https://github.com/SrTobi/futures-scopes/"
keywords = ["async", "futures"]
license = "MIT"
name = "futures-scopes"
publish = true
repository = "https://github.com/SrTobi/futures-scopes/"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
dashmap = "5.4.0"
futures = {version = "0.3.24", features = ["thread-pool"]}
pin-project = "1.0.12"
