[package]
authors = ["SrTobi <code.databyte@gmail.com>"]
description = "Runtime agnostic, nestable, scopes for spawning non-static futures."
documentation = "https://docs.rs/futures-scopes"
edition = "2021"
homepage = "https://github.com/SrTobi/futures-scopes/"
keywords = ["async", "futures"]
license = "MIT"
name = "futures-scopes"
publish = true
repository = "https://github.com/SrTobi/futures-scopes/"
version = "0.1.6"

[features]
default = ["local", "relay"]
local = []
relay = ["dep:dashmap", "dep:crossbeam-channel"]

[dependencies]
crossbeam-channel = {version = "0.5.6", optional = true}
dashmap = {version = "5.4.0", optional = true}
futures = {version = "0.3.24", default-features = false, features = ["std"]}
pin-project = "1.0.12"

[dev-dependencies]
futures = {default-features = true, features = ["thread-pool"]}
