[package]
authors = ["SrTobi <code.databyte@gmail.com>"]
description = "Runtime agnostic, nestable, scopes for spawning non-static futures."
documentation = "https://docs.rs/futures-scopes"
edition = "2024"
homepage = "https://github.com/SrTobi/futures-scopes/"
keywords = ["async", "futures"]
license = "MIT"
name = "futures-scopes"
publish = true
repository = "https://github.com/SrTobi/futures-scopes/"
version = "0.4.0"

[lints.clippy]
cloned_instead_of_copied = "warn"
default_trait_access = "warn"
doc_markdown = "warn"
enum_glob_use = "warn"
flat_map_option = "warn"
implicit_hasher = "warn"
iter_without_into_iter = "warn"
manual_assert = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
match_wildcard_for_single_variants = "warn"
#non_local_definitions = "allow"
print_stdout = "warn"
ref_option_ref = "warn"
return_self_not_must_use = "allow"
semicolon_if_nothing_returned = "warn"
unused_self = "warn"

[features]
default = ["local", "relay"]
local = []
relay = ["dep:dashmap", "dep:crossbeam-channel"]

[dependencies]
crossbeam-channel = {version = "0.5.6", optional = true}
dashmap = {version = "6.1.0", optional = true}
futures = {version = "0.3.24", default-features = false, features = ["std"]}
pin-project = "1.0.12"

[dev-dependencies]
futures = {version = "0.3.24", default-features = true, features = ["thread-pool"]}
